--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ python:
   - "2.7"
 sudo: enabled
 install:
-  - pip install -U setuptools twine wheel
+  - pip install setuptools twine wheel
   - python setup.py build
   - python setup.py install
 script: true
