--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,6 @@ install:
   - pip install setuptools twine wheel flask==0.10.1
   - python setup.py build
   - python setup.py install
-script: true
+script:
+  - python tests/test_web.py
+  - python tests/test_installer.py
