--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "2.7"
 sudo: enabled
 install:
-  - pip install setuptools twine wheel flask==0.10.1
+  - pip install setuptools twine wheel flask
   - python setup.py build
   - python setup.py install
 script:
