--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ python:
   - "pypy3"
 sudo: enabled
 install:
-  - pip install -U setuptools twine wheel flask codecov
+  - pip install -U setuptools twine wheel flask codecov semver
   - make dev
 script:
   - coverage run setup.py test
