--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,14 @@ env:
   - CODECOV_TOKEN="a6a7750b-16dd-4694-a827-6940755771ab"
 python:
   - "2.7"
-  - "3.4"
   - "3.5"
   - "3.6"
+  - "3.7"
   - "pypy"
   - "pypy3"
 sudo: enabled
 install:
-  - pip install -U setuptools twine wheel flask codecov
+  - pip install -U -r dev-requirements.txt
   - make dev
 script:
   - coverage run setup.py test
