--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: python
 env:
+  global:
   - CODECOV_TOKEN="a6a7750b-16dd-4694-a827-6940755771ab"
+  matrix:
+  - FLASK_VERSION=0.9
+  - FLASK_VERSION=0.10
+  - FLASK_VERSION=0.12
+  - FLASK_VERSION=1.0
+  - FLASK_VERSION=1.1.0
 python:
   - "2.7"
   - "3.5"
@@ -11,6 +18,7 @@ python:
 sudo: enabled
 install:
   - pip install -U -r dev-requirements.txt
+  - pip install Flask==$FLASK_VERSION
   - make dev
 script:
   - coverage run setup.py test
