--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,12 @@
 language: python
+sudo: enabled
+python:
+  - "2.7"
+  - "3.5"
+  - "3.6"
+  - "3.7"
+  - "pypy"
+  - "pypy3"
 env:
   global:
   - CODECOV_TOKEN="a6a7750b-16dd-4694-a827-6940755771ab"
@@ -8,14 +16,16 @@ env:
   - FLASK_VERSION=0.12
   - FLASK_VERSION=1.0
   - FLASK_VERSION=1.1.0
-python:
-  - "2.7"
-  - "3.5"
-  - "3.6"
-  - "3.7"
-  - "pypy"
-  - "pypy3"
-sudo: enabled
+matrix:
+  exclude:
+    - python: "3.5"
+      env: FLASK_VERSION=0.9
+    - python: "3.6"
+      env: FLASK_VERSION=0.9
+    - python: "3.7"
+      env: FLASK_VERSION=0.9
+    - python: "pypy3"
+      env: FLASK_VERSION=0.9
 install:
   - pip install -U -r dev-requirements.txt
   - pip install Flask==$FLASK_VERSION
