--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
   matrix:
   - FLASK_VERSION=0.9
   - FLASK_VERSION=0.10
+  - FLASK_VERSION=0.11
   - FLASK_VERSION=0.12
   - FLASK_VERSION=1.0
   - FLASK_VERSION=1.1.0
@@ -27,6 +28,8 @@ matrix:
       env: FLASK_VERSION=0.9
     - python: "pypy3"
       env: FLASK_VERSION=0.9
+    - python: "pypy3"
+      env: FLASK_VERSION=0.11
 services:
   - redis-server
 install:
