--- a/flask_pluginkit/static/translations.ini
+++ b/flask_pluginkit/static/translations.ini
@@ -3,7 +3,15 @@ reload = 重载应用
 reload.title = 没有交互直接重载您的Web应用程序！
 download = 下载远程插件
 upload = 上传本地插件
-author = 作者
 version = 版本
-github = GitHub
 plugins_count = 插件数
+packageName = 插件名
+packageName.title = 悬浮显示包名
+submit = 提交
+Description = 描述
+Author = 作者
+URL = 主页
+LICENSE = 许可证
+State = 状态
+Action = 操作
+install = 安装模块
