--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ matrix:
     env: FLASK_VERSION=0.9
   - python: '3.6'
     env: FLASK_VERSION=0.9
+  - python: '3.7'
+    env: FLASK_VERSION=0.9
   - python: pypy3
     env: FLASK_VERSION=0.9
   - python: pypy3
