--- a/flask_pluginkit/static/translations.ini
+++ b/flask_pluginkit/static/translations.ini
@@ -1,3 +1,21 @@
+[en]
+reload = Reload Application
+reload.title = No interaction directly overloading your web app!
+download = Download Remote Plugin
+upload = Upload Local Plugin
+version = Version
+plugins_count = Plugins Count
+packageName = Name
+packageName.title = Suspension display package name
+submit = Submit
+Description = Description
+Author = Author
+URL = URL
+LICENSE = LICENSE
+State = State
+Action = Action
+install = Install Package
+
 [zh-cn]
 reload = 重载应用
 reload.title = 没有交互直接重载您的Web应用程序！
