--- a/.travis.yml
+++ b/.travis.yml
@@ -38,8 +38,9 @@ services:
 install:
 - pip install -U -r dev-requirements.txt
 - pip install redis
-- pip install git+https://github.com/flask-pluginkit/demo@master
+- pip install git+https://github.com/flask-pluginkit/demo@master#egg=flask-pluginkit-demo
 - pip install Flask==$FLASK_VERSION
+- pip install Werkzeug<1.0.0
 - make dev
 script:
 - coverage run setup.py test
