--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ python:
 - '3.5'
 - '3.6'
 - '3.7'
+- '3.8'
 - nightly
 - pypy
 - pypy3
@@ -26,6 +27,8 @@ matrix:
   - python: '3.6'
     env: FLASK_VERSION=0.9
   - python: '3.7'
+    env: FLASK_VERSION=0.9
+  - python: '3.8'
     env: FLASK_VERSION=0.9
   - python: pypy3
     env: FLASK_VERSION=0.9
