--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,10 @@ jobs:
       run: |
         coverage run setup.py test && codecov -t ${{ secrets.CODECOV_TOKEN }}
 
+    - name: Prepare publish packge
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && matrix.flask-version == '2.0.0' && matrix.python-version == '3.8'
+      run: pip install -U setuptools twine wheel && python setup.py sdist bdist_wheel
+
     - name: Publish package
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && matrix.flask-version == '2.0.0' && matrix.python-version == '3.8'
       uses: pypa/gh-action-pypi-publish@release/v1
