--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install codecov 'semver>=2.10.0' redis 
-        pip install Flask==${{ matrix.flask-version }}
+        pip install codecov 'semver>=2.10.0,<3.0.0' redis
+        pip install Flask==${{ matrix.flask-version }} 'markupsafe<=2.0.1' 'jinja2<3.0'
         test "${{ matrix.flask-version }}" = "1.0.4" && pip install 'werkzeug<1.0'
         pip install git+https://github.com/saintic/flask-pluginkit-demo@master#egg=flask-pluginkit-demo
 
