--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,15 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/Flask-PluginKit
     strategy:
       matrix:
         flask-version: ["3.0.0"]
         python-version: ["3.8", "3.10"]
+    permissions:
+      id-token: write
 
     steps:
     - uses: actions/checkout@v4
@@ -26,6 +31,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install .
         pip install codecov redis
         pip install Flask==${{ matrix.flask-version }}
         pip install -r examples/fulldemo/requirements.txt
@@ -38,10 +44,6 @@ jobs:
     - name: Test & upload report to coverage
       run: |
         coverage run -m unittest && codecov -t ${{ secrets.CODECOV_TOKEN }}
-
-    - name: Prepare publish packge
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && matrix.flask-version == '3.0.0' && matrix.python-version == '3.8'
-      run: pip install -U setuptools twine wheel && python setup.py sdist bdist_wheel
 
     - name: Publish package
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && matrix.flask-version == '3.0.0' && matrix.python-version == '3.8'
